Revert "fix(Info): number vertical align center (#6952)"
This reverts commit 3eb8e00843dc7f5cfcac40ffd0abb2e474573035.

--- a/src/info/index.less
+++ b/src/info/index.less
@@ -10,7 +10,8 @@
   color: @info-color;
   font-weight: @info-font-weight;
   font-size: @info-font-size;
-  line-height: 1.2;
+  font-family: @info-font-family;
+  line-height: @info-size - @info-border-width * 2;
   text-align: center;
   background-color: @info-background-color;
   border: @info-border-width solid @white;
